# aimbot

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.mouse_test  Dockerfile.ndi6  README.md  docker-compose.yml  mouse-converter.html  reset_tpm2.sh
src/: aim.rs  bullet.rs  config.rs  esp_button.rs  event.rs  lib.rs  main.rs  model.rs  mouse.rs  stream.rs
src/stream/: mod.rs  ndi.rs  ndi4.rs  ndi6.rs  udp.rs
