[package]
name = "aimbot"
version = "1.0.0"
edition = "2024"
rust-version = "1.86.0"

[dependencies]
opencv = { version = "0.95.1", default-features = false, features = ["imgproc", "videoio", "imgcodecs"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-queue", "crossbeam-channel"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ndarray = "0.16.1"
ort = { version = "2.0.0-rc.9", default-features = false, features = ["load-dynamic", "ndarray", "tensorrt"] }
anyhow = "1.0.99"
dotenv = "0.15.0"
actix-web = "4.11.0"
actix-cors = "0.7.1"
rand = "0.9.2"
serialport = "4.7.2"
ndi = { version = "0.1.2", optional = true }
grafton-ndi = { git = "https://github.com/dat58/ndi", branch = "hotfix-0.8.1", version = "0.8.2", optional = true }
lazy_static = { version = "1.5.0", optional = true }
uuid = { version = "1.18.0", features = ["v4"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"]}
tokio-util = "0.7.16"
mimalloc = "0.1.48"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[features]
disable-mouse = []
debug = []
save-bbox = ["debug"]
ndi4 = ["dep:ndi"]
ndi6 = ["dep:grafton-ndi", "dep:lazy_static"]
default = ["ndi4"]
